--- a/html/grid.html
+++ b/html/grid.html
@@ -15,8 +15,8 @@
         
             #grid-container {
                 display: grid;
-                grid-template-columns: repeat(3, 3fr);
-                grid-template-rows: repeat(3, 3fr);
+                grid-template-columns: repeat(3, 50mm);
+                grid-template-rows: repeat(3, 20mm);
                 width: 50%;
                 height: 50%;
             }
@@ -64,6 +64,22 @@
                 align-items: end;
             }
 
+            .text-8 {font-size: 8pt}
+            .text-9 {font-size: 9pt}
+            .text-10 {font-size: 10pt}
+            .text-12 {font-size: 12pt}
+            .text-14 {font-size: 14pt}
+            .text-16 {font-size: 16pt}
+            .text-18 {font-size: 18pt}
+            .text-20 {font-size: 20pt}
+            .bold {font-weight: bold}
+            .italic {font-style: italic}
+
+            .align-left {text-align: left}
+            .align-right {text-align: right}
+            .align-center {text-align: center}
+            .align-justify {text-align: justify}
+
         </style>
     </head>
     <body>
@@ -78,6 +94,61 @@
             <div class="grid-bottom-left">grid-bottom-left</div>
             <div class="grid-bottom-center">grid-bottom-center</div>
             <div class="grid-bottom-right">grid-bottom-right</div>
+        </div>
+
+        <div>
+            <div class="text-8">.text8<div>
+            <div class="text-9">.text12<div>
+            <div class="text-10">.text10<div>
+            <div class="text-12">.text12<div>
+            <div class="text-14">.text14<div>
+            <div class="text-16">.text16<div>
+            <div class="text-18">.text18<div>
+            <div class="text-20">.text20<div>
+
+            <div class="text-14 bold">bold</div>
+            <div class="text-14 bold italic">bold italic</div>
+            <div class="text-14 italic">italic</div>
+        </div>
+
+        <div>
+<!--lorem-->
+            <div>.align-left</div>
+            <p class="text-10 align-left">Porttitor ipsum at ipsum. Nam massa. Duis lorem. Donec porta. Proin ligula.
+            Aenean nunc massa, dapibus quis, imperdiet id, commodo a, lacus. Cras sit amet
+            erat et nulla varius aliquet. Aliquam erat volutpat. Praesent feugiat vehicula
+            pede. Suspendisse pulvinar, orci in sollicitudin venenatis, nibh libero
+            hendrerit sem, eu tempor nisi felis et metus. Etiam gravida sem ut mi. Integer
+            volutpat, enim eu varius gravida, risus urna venenatis lectus, ac ultrices quam
+            nulla eu leo. Duis arcu. Class aptent taciti sociosqu ad litora torquent per
+            conubia nostra, per inceptos himenaeos.</p>
+            <div>.align-right</div>
+            <p class="text-10 align-right">Porttitor ipsum at ipsum. Nam massa. Duis lorem. Donec porta. Proin ligula.
+            Aenean nunc massa, dapibus quis, imperdiet id, commodo a, lacus. Cras sit amet
+            erat et nulla varius aliquet. Aliquam erat volutpat. Praesent feugiat vehicula
+            pede. Suspendisse pulvinar, orci in sollicitudin venenatis, nibh libero
+            hendrerit sem, eu tempor nisi felis et metus. Etiam gravida sem ut mi. Integer
+            volutpat, enim eu varius gravida, risus urna venenatis lectus, ac ultrices quam
+            nulla eu leo. Duis arcu. Class aptent taciti sociosqu ad litora torquent per
+            conubia nostra, per inceptos himenaeos.</p>
+            <div>.align-center</div>
+            <p class="text-10 align-center">Porttitor ipsum at ipsum. Nam massa. Duis lorem. Donec porta. Proin ligula.
+            Aenean nunc massa, dapibus quis, imperdiet id, commodo a, lacus. Cras sit amet
+            erat et nulla varius aliquet. Aliquam erat volutpat. Praesent feugiat vehicula
+            pede. Suspendisse pulvinar, orci in sollicitudin venenatis, nibh libero
+            hendrerit sem, eu tempor nisi felis et metus. Etiam gravida sem ut mi. Integer
+            volutpat, enim eu varius gravida, risus urna venenatis lectus, ac ultrices quam
+            nulla eu leo. Duis arcu. Class aptent taciti sociosqu ad litora torquent per
+            conubia nostra, per inceptos himenaeos.</p>
+            <div>.align-justify</div>
+            <p class="text-10 align-justify">Porttitor ipsum at ipsum. Nam massa. Duis lorem. Donec porta. Proin ligula.
+            Aenean nunc massa, dapibus quis, imperdiet id, commodo a, lacus. Cras sit amet
+            erat et nulla varius aliquet. Aliquam erat volutpat. Praesent feugiat vehicula
+            pede. Suspendisse pulvinar, orci in sollicitudin venenatis, nibh libero
+            hendrerit sem, eu tempor nisi felis et metus. Etiam gravida sem ut mi. Integer
+            volutpat, enim eu varius gravida, risus urna venenatis lectus, ac ultrices quam
+            nulla eu leo. Duis arcu. Class aptent taciti sociosqu ad litora torquent per
+            conubia nostra, per inceptos himenaeos.</p>
 
         </div>
     </body>
