--- a/html/grid.html
+++ b/html/grid.html
@@ -1,86 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <style type="text/css">
-
-            @page {
-                size: a4;
-                font-family: Arial;
-            }
-
-            body {
-                font-family: Arial;
-
-            }
-        
-            #grid-container {
-                display: grid;
-                grid-template-columns: repeat(3, 50mm);
-                grid-template-rows: repeat(3, 20mm);
-                width: 50%;
-                height: 50%;
-            }
-
-            #grid-container div {
-                border: 1px solid grey;
-                display: grid;
-            }   
-
-            .grid-top-left {
-                justify-content: left;
-                align-items: top;
-            }
-            .grid-top-center {
-                justify-content: center;
-                align-items: top;
-            }
-            .grid-top-right {
-                justify-content: right;
-                align-items: top;
-            }
-
-            .grid-middle-left {
-                justify-content: left;
-                align-items: center;
-            }
-            .grid-middle-center {
-                justify-content: center;
-                align-items: center;
-            }
-            .grid-middle-right {
-                justify-content: right;
-                align-items: center;
-            }
-            .grid-bottom-left {
-                justify-content: left;
-                align-items: end;
-            }
-            .grid-bottom-center {
-                justify-content: center;
-                align-items: end;
-            }
-            .grid-bottom-right {
-                justify-content: right;
-                align-items: end;
-            }
-
-            .text-8 {font-size: 8pt}
-            .text-9 {font-size: 9pt}
-            .text-10 {font-size: 10pt}
-            .text-12 {font-size: 12pt}
-            .text-14 {font-size: 14pt}
-            .text-16 {font-size: 16pt}
-            .text-18 {font-size: 18pt}
-            .text-20 {font-size: 20pt}
-            .bold {font-weight: bold}
-            .italic {font-style: italic}
-
-            .align-left {text-align: left}
-            .align-right {text-align: right}
-            .align-center {text-align: center}
-            .align-justify {text-align: justify}
-
-        </style>
+        <link rel="stylesheet" href="grid.css">
     </head>
     <body>
 
