--- a/html/grid.html
+++ b/html/grid.html
@@ -72,6 +72,15 @@
             conubia nostra, per inceptos himenaeos.</p>
 
         </div>
+
+        <table border="1" style="width: 100%">
+            <tbody>
+                <tr>
+                    <td><div style="height: 20mm" class="grid grid-middle-center">center</div></td>
+                    <td><div style="height: 20mm" class="grid grid-top-right">center</div></td>
+                </tr>
+            </body>
+        </table>
     </body>
 </html>
 
