--- a/html/blue2.html
+++ b/html/blue2.html
@@ -68,7 +68,7 @@
             }
 
             section {
-                page-break-inside: unset;
+                break-inside: allow;
             }
 
             ol.standard li,
