--- a/html/blue.html
+++ b/html/blue.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="content/type" content="text/html; charset=utf8"/>
+        <meta charset="UTF-8" />
         <style type="text/css">
 
             :root {
