--- a/html/blue3.html
+++ b/html/blue3.html
@@ -68,10 +68,6 @@
                 }
             }
 
-            section {
-                break-inside: allow;
-            }
-
             ol.standard li,
             ul.standard li {
                 margin: 0;
@@ -139,6 +135,7 @@
             .icon-list-vertical img {
                 width: 16mm;
                 margin-bottom: 1em;
+                display: block;     /* enable page breaks*/
             }
 
             .header {
@@ -242,8 +239,7 @@
             <div class="container-3">
                 <div class="col1 icon-list-vertical">
                     <img src="icons/binocular.svg">               
-                    <img src="icons/desktop-monitor-download.svg">
-                    <img src="icons/laptop-smiley-1.svg">
+                    <img src="icons/binocular.svg">               
                 </div>    
                 <div class="col2">
                     <div class="keep-together">
@@ -287,7 +283,7 @@
             </div>
         </section>
 
-        <section style="break-inside: auto">
+        <section>
             <div class="header-box">
                 <h1>Schutzmassnahmen und Verhaltensregeln</h1>
             </div>
@@ -295,18 +291,18 @@
             <div class="container-3">
                 <div class="col1">    
                     <div class="icon-list-vertical">
-                        <img src="icons/binocular.svg">               
-                        <img src="icons/desktop-monitor-download.svg">
+                        <img src="icons/laptop-smiley-1.svg">
+                        <img src="icons/laptop-smiley-1.svg">
                         <img src="icons/laptop-smiley-1.svg">
                     </div>    
                 </div>    
 
                 <div class="col2">   
-                    <div class="keep-together" style="break-inside: auto">
-                        <div class="list-header" style="break-inside: auto">
+                    <div class="keep-together">
+                        <div class="list-header">
                             Das Bedienen der Säulenbohrmaschine ist nur für unterwiesene Fachkräfte erlaubt !
                         </div>
-                        <ul class="standard" style="break-inside: auto">
+                        <ul class="standard">
                             <li>Arbeiten sie niemals mit Schadhaften Maschinen oder Werkzeugen.</li>
                             <li>Führen sie Kontrollmessungen an aufgespannten Werkstücken nur an der stehenden Maschine durch.</li>
                             <li>Entfernen sie Späne nur mit geeigneten Hilfsmitteln, z.B Spänehaken.</li>
@@ -350,7 +346,8 @@
 
                 <div class="col3">
                     <div class="icon-list-vertical">
-                        <img src="icons/binocular.svg">               
+                        <img src="icons/desktop-monitor-download.svg">
+                        <img src="icons/laptop-smiley-1.svg">
                         <img src="icons/desktop-monitor-download.svg">
                         <img src="icons/laptop-smiley-1.svg">
                     </div>    
