--- a/html/header.html
+++ b/html/header.html
@@ -8,31 +8,60 @@
     #target-head7:after {content: string(md-head7) }
     #target-head8:after {content: string(md-head8) }
 
-    #target-h1-text:after {
-        content: string(h1-text);        
-        font-size: 2em;
-        font-weight: bold;
-        color: pink;
-    }
-
-    .header {
+    #header-page-first {
         top: var(--page-margin-header-top);
         height: var(--header-height1);
-        position: absolute;
         border:  var(--border-width) solid var(--border-color);
+        position: absolute;
         width: 100%;
+        box-sizing: border-box;
     }
+
+    #header-page-first {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 5mm auto auto 5mm 5mm;
+        font-size: 8pt;
+    }
+
+    .grid-span-2 {
+        grid-column: 1 / 3;
+    }
+
+
+    #header-page-first div {
+        border: 1px solid green;
+    }
+
+    #target-head3 {
+        text-align: center;
+        font-size: 20pt;
+    }
+
+    #target-head4 {
+        text-align: center;
+        font-size: 16pt;
+    }
+
+    #target-head2,
+    #target-head6,
+    #target-head8 {
+        text-align: right;
+    }
+
+
 </style>
 
-<div class="header">
-    <div id="target-head1">1</div>
-    <div id="target-head2">2</div>
-    <div id="target-head3">3</div>
-    <div id="target-head4">4</div>
-    <div id="target-head5">5</div>
-    <div id="target-head6">6</div>
-    <div id="target-head7">7</div>
-    <div id="target-head8">8</div>
+<div id="header-page-first">
+    <div id="target-head1"></div>
+    <div id="target-head2"></div>
 
-    <div id="target-h1-text">H1</div>
+    <div class="grid-span-2" id="target-head3"></div>
+    <div class="grid-span-2" id="target-head4"></div>
+
+
+    <div id="target-head5"></div>
+    <div id="target-head6"></div>
+    <div id="target-head7"></div>
+    <div id="target-head8"></div>
 </div>
