--- a/html/header.html
+++ b/html/header.html
@@ -10,6 +10,7 @@
 
     #header-page-first {
         top: var(--page-margin-header-top);
+        top: 10mm;
         height: var(--header-height1);
         border:  var(--border-width) solid var(--border-color);
         position: absolute;
@@ -26,11 +27,6 @@
 
     .grid-span-2 {
         grid-column: 1 / 3;
-    }
-
-
-    #header-page-first div {
-        border: 1px solid green;
     }
 
     #target-head3 {
