--- a/html/header.html
+++ b/html/header.html
@@ -10,9 +10,10 @@
 
     #header-page-first {
         top: var(--page-margin-header-top);
-        top: 10mm;
         height: var(--header-height1);
-        border:  var(--border-width) solid var(--border-color);
+        border-top:  var(--border-width) solid var(--border-color);
+        border-left:  var(--border-width) solid var(--border-color);
+        border-right:  var(--border-width) solid var(--border-color);
         position: absolute;
         width: 100%;
         box-sizing: border-box;
@@ -32,6 +33,7 @@
     #target-head3 {
         text-align: center;
         font-size: 20pt;
+        text-transform: uppercase;
     }
 
     #target-head4 {
