--- a/html/header2.html
+++ b/html/header2.html
@@ -11,7 +11,9 @@
     #header-page-all {
         top: var(--page-margin-header-top);
         height: var(--header-height2);
-        border:  var(--border-width) solid var(--border-color);
+        border-top:  var(--border-width) solid var(--border-color);
+        border-left:  var(--border-width) solid var(--border-color);
+        border-right:  var(--border-width) solid var(--border-color);
         position: absolute;
         width: 100%;
         box-sizing: border-box;
@@ -31,6 +33,7 @@
     #target-head3 {
         text-align: center;
         font-size: 20pt;
+        text-transform: uppercase;
     }
 
     #target-head4 {
