--- a/html/header2.html
+++ b/html/header2.html
@@ -24,6 +24,8 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 5mm auto auto;
         font-size: 8pt;
+        padding-left: 2mm;
+        padding-right: 2mm;
     }
 
     .grid-span-2 {
